tests/ui/codegen/invalid-llvm-intrinsic.stderr
error: Invalid LLVM Intrinsic `llvm.abcde`
  --> $DIR/invalid-llvm-intrinsic.rs:7:5
   |
LL |     fn foo();
   |     ^^^^^^^^^

error: aborting due to 1 previous error

